plataforma iot services v4

--- a/docker_node_install.yml
+++ b/docker_node_install.yml
@@ -14,16 +14,11 @@ services:
     #Ejecuta el código que está en esta dirección
     working_dir: /home/node/app
     volumes:
-      - ./mycode/index.js:/home/node/app/index.js
+      - ./app:/home/node/app
     ports:
       - "3000:3000" #Puerto del el front-end
       - "3001:3001" #Puerto para la API
       - "80:3002"   #Conexión sin ssl
-
-    #Los links reemplazan las IPs
-    links:
-      - emqx
-      - mongo
 
     #Creamos la carpeta node_modules solo por 1ra vez
     command: sh -c "npm install"
