--- a/docker_compose_production.yml
+++ b/docker_compose_production.yml
@@ -35,8 +35,9 @@ services:
       - emqx
       - mongo
 
+    command: sh -c "echo 'delaying 30 seconds' && sleep 30 && npm run start"
     #command: sh -c "node index.js"
-    command: sh -c "npm run build && npm run start"
+    #command: sh -c "npm run build && npm run start"
   #------------------------------------------------------
   #------------------------------------------------------
   #------------------------------------------------------
