plataforma iot services v6-1

--- a/docker_compose_production.yml
+++ b/docker_compose_production.yml
@@ -48,7 +48,8 @@ services:
   mongo:
     container_name: mongo
     image: mongo:4.4
-
+    logging:
+      driver: "none"
     environment:
       TZ: "${TZ}"
       MONGO_INITDB_ROOT_USERNAME: "${MONGO_USERNAME}"
