--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: "3.8"
 
 #----- Volúmenes de emqx -----
-#volumes:
-#  vol-emqx-data:
-#    name: foo-emqx-data
+volumes:
+  vol-emqx-data:
+    name: foo-emqx-data
 #  vol-emqx-etc:
 #    name: foo-emqx-etc
-#  vol-emqx-log:
-#    name: foo-emqx-log
+  vol-emqx-log:
+    name: foo-emqx-log
 #-----------------------------
 
 services:
@@ -53,10 +53,10 @@ services:
       #Se grega el prefijo EMQX si editamos algo de emqx.conf.
       #El . se reemplaza por __
     
-    #volumes:
-    #  - vol-emqx-data:/opt/emqx/data
+    volumes:
+      - vol-emqx-data:/opt/emqx/data
     #  - vol-emqx-etc:/opt/emqx/etc #Aquí tenemos la configuración de emqx
-    #  - vol-emqx-log:/opt/emqx/log
+      - vol-emqx-log:/opt/emqx/log
 
     links:
       #Mongo ingresa acá como un link
